unpackaged/objects/Call_Report__c.object
<CustomObject>
  <fields>
    <fullName>ATLANTIS_Abutments__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "ATLANTIS Abutments")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATLANTIS Abutments</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ATLANTIS_ISUS__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "ATLANTIS ISUS")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATLANTIS ISUS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ActivitySubtype__c</fullName>
    <description>200330 CFE 2.0</description>
    <label>Activity Subtype</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>ActivityType__c</controllingField>
      <restricted>true</restricted>
      <valueSetName>ActivitySubtype</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>ActivityType__c</fullName>
    <description>200330 CFE 2.0</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>ActivityType</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Ankylos__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "Ankylos")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ankylos</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Assigned_To_User_Country__c</fullName>
    <description>SBU: ALL, Country: All - Not on Page Layout - Set to the User Country of the Assigned To. Used to Control the Values of the Products to report on</description>
    <inlineHelpText>The user that this event is assigned to does not have an associated country. Select the country this this user operates in. You will only have to do this once.</inlineHelpText>
    <label>Assigned To User Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>BEX</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Denmark</fullName>
        </value>
        <value>
          <fullName>Distributor Markets</fullName>
        </value>
        <value>
          <fullName>Egypt</fullName>
        </value>
        <value>
          <fullName>Finland</fullName>
        </value>
        <value>
          <fullName>France</fullName>
        </value>
        <value>
          <fullName>Germany</fullName>
        </value>
        <value>
          <fullName>Holland</fullName>
        </value>
        <value>
          <fullName>Hong Kong</fullName>
        </value>
        <value>
          <fullName>HQ: DE</fullName>
        </value>
        <value>
          <fullName>HQ: NL</fullName>
        </value>
        <value>
          <fullName>HQ: SE</fullName>
        </value>
        <value>
          <fullName>India</fullName>
        </value>
        <value>
          <fullName>Indonesia</fullName>
        </value>
        <value>
          <fullName>Italy</fullName>
        </value>
        <value>
          <fullName>Japan</fullName>
        </value>
        <value>
          <fullName>Kazakhstan</fullName>
        </value>
        <value>
          <fullName>Kuwait</fullName>
        </value>
        <value>
          <fullName>Luxembourg</fullName>
        </value>
        <value>
          <fullName>Malaysia</fullName>
        </value>
        <value>
          <fullName>New Zealand</fullName>
        </value>
        <value>
          <fullName>Norway</fullName>
        </value>
        <value>
          <fullName>Philippines</fullName>
        </value>
        <value>
          <fullName>Poland</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Astra_Tech_Implant_System_EV__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "Astra Tech Implant System EV")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Astra Tech Implant System EV</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Astra_Tech_Implant_System_Profile__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "Astra Tech Implant System Profile")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Astra Tech Implant System Profile</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Astra_Tech_Implant_System__c</fullName>
    <formula>INCLUDES(Products_discussed_IMPL__c, "Astra Tech Implant System")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Astra Tech Implant System</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Call_Notes__c</fullName>
    <label>Call Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Courses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Courses</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>CreatedByMyDirectReports__c</fullName>
    <formula>IF(CreatedBy.ManagerId = $User.Id, True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By My Direct Reports</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Date__c</fullName>
    <description>200312 Date POC field</description>
    <label>Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>EndDateTime__c</fullName>
    <description>200331 CFE 2.0</description>
    <label>End</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>EventWhoIds__c</fullName>
    <description>Test text field to hold EventWhoIds.</description>
    <label>EventWhoIds</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Event_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Event ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Frios__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "Frios")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frios</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Left_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left a Sample</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Met_with_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met with Assistant</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Met_with_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Met with Decision Maker</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>MySimplant__c</fullName>
    <formula>INCLUDES( Products_discussed_IMPL__c , "MySimplant")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MySimplant</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Other_SBU_Products_Discussed__c</fullName>
    <label>Other SBU Products Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Whoops</fullName>
        </value>
        <value>
          <fullName>These should have been loaded in by APEX</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Other_SBU_discussed__c</fullName>
    <description>SBU: ALL, Country: ALL - Used to capture in the call reporting if also additional SBUs were discussed during the meeting</description>
    <inlineHelpText>Enter if also another SBU and/or SBU products were discussed during the meeting</inlineHelpText>
    <label>Other SBU discussed</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Implants</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
        <value>
          <fullName>Preventive</fullName>
        </value>
        <value>
          <fullName>Prosthetics</fullName>
        </value>
        <value>
          <fullName>Restorative</fullName>
        </value>
        <value>
          <fullName>CAD/CAM</fullName>
        </value>
        <value>
          <fullName>Instruments</fullName>
        </value>
        <value>
          <fullName>Treatment Centers</fullName>
        </value>
        <value>
          <fullName>Imaging Systems</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Other_SBU_notes__c</fullName>
    <description>SBU: ALL, Country: ALL - Used to capture notes about the other SBU discussed. E.g. if interested in a meeting with Sales Rep from that SBU</description>
    <inlineHelpText>Enter information about what was discussed related to the Other SBU</inlineHelpText>
    <label>Other SBU notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Placed_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placed Order</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ProductGroup__c</fullName>
    <description>200317 CFE 2.0 POC</description>
    <label>Product Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>SBU_Full_Names</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Product_Discussed_ALL_SBUs__c</fullName>
    <description>A concatenation of all Products discussed Cross-SBU. Updated by WF - needs to be updated when new SBUs are created</description>
    <inlineHelpText>A concatenation of all Products discussed Cross-SBU.</inlineHelpText>
    <label>Product Discussed (ALL SBUs)</label>
    <length>32000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Products_Discussed__c</fullName>
    <label>Products Discussed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Whoops</fullName>
        </value>
        <value>
          <fullName>These should have been loaded in by APEX</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_CDCM__c</fullName>
    <label>Products discussed (CDCM)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AC CONNECT</fullName>
        </value>
        <value>
          <fullName>AC ORTHO</fullName>
        </value>
        <value>
          <fullName>Blocs</fullName>
        </value>
        <value>
          <fullName>BlueCam</fullName>
        </value>
        <value>
          <fullName>Burs</fullName>
        </value>
        <value>
          <fullName>CEREC</fullName>
        </value>
        <value>
          <fullName>CEREC Club</fullName>
        </value>
        <value>
          <fullName>CEREC Full System</fullName>
        </value>
        <value>
          <fullName>CEREC HUB</fullName>
        </value>
        <value>
          <fullName>CEREC Materials</fullName>
        </value>
        <value>
          <fullName>Cerec MC</fullName>
        </value>
        <value>
          <fullName>Cerec MCX</fullName>
        </value>
        <value>
          <fullName>Cerec MCXL</fullName>
        </value>
        <value>
          <fullName>CEREC Omnicam</fullName>
        </value>
        <value>
          <fullName>CEREC Omnicam AC</fullName>
        </value>
        <value>
          <fullName>CEREC Omnicam AF (w/o camera)</fullName>
        </value>
        <value>
          <fullName>CEREC Omnicam Connect</fullName>
        </value>
        <value>
          <fullName>CEREC Ortho Software</fullName>
        </value>
        <value>
          <fullName>CEREC Primescan AC</fullName>
        </value>
        <value>
          <fullName>CEREC Pro Modul</fullName>
        </value>
        <value>
          <fullName>CEREC Software</fullName>
        </value>
        <value>
          <fullName>CEREC SpeedFire</fullName>
        </value>
        <value>
          <fullName>DI</fullName>
        </value>
        <value>
          <fullName>Discs</fullName>
        </value>
        <value>
          <fullName>inEoS X5</fullName>
        </value>
        <value>
          <fullName>inFire HTC</fullName>
        </value>
        <value>
          <fullName>inFire Speed</fullName>
        </value>
        <value>
          <fullName>InLab</fullName>
        </value>
        <value>
          <fullName>inLab Materials</fullName>
        </value>
        <value>
          <fullName>inLab MCX5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_ENDO__c</fullName>
    <description>SBU: Endodontics, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Endodontics</description>
    <label>Products discussed (ENDO)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AH Plus</fullName>
        </value>
        <value>
          <fullName>AH TEMP</fullName>
        </value>
        <value>
          <fullName>Appex Locator</fullName>
        </value>
        <value>
          <fullName>Conform Fit Guttapercha</fullName>
        </value>
        <value>
          <fullName>EF1123 - Universal</fullName>
        </value>
        <value>
          <fullName>EF1124 - NEXT</fullName>
        </value>
        <value>
          <fullName>EF1210 - WaveOne</fullName>
        </value>
        <value>
          <fullName>EF1211 - GOLD</fullName>
        </value>
        <value>
          <fullName>EF1721 - Universal HF</fullName>
        </value>
        <value>
          <fullName>EF1820 - ProGlider</fullName>
        </value>
        <value>
          <fullName>EF2990 - MAccess</fullName>
        </value>
        <value>
          <fullName>EF2A60 - MAccess</fullName>
        </value>
        <value>
          <fullName>EF2D60 - MAccess</fullName>
        </value>
        <value>
          <fullName>Endoactivator</fullName>
        </value>
        <value>
          <fullName>ENDODONZIA</fullName>
        </value>
        <value>
          <fullName>EO3210 - GuttaCore</fullName>
        </value>
        <value>
          <fullName>EO8320 - AH26/AH PLUS JET</fullName>
        </value>
        <value>
          <fullName>EQ2110 - Propex</fullName>
        </value>
        <value>
          <fullName>EQ2111 - Pixi</fullName>
        </value>
        <value>
          <fullName>EQ4240 - X-Smart</fullName>
        </value>
        <value>
          <fullName>EQ4241 - PLUS</fullName>
        </value>
        <value>
          <fullName>EQ4242 - IQ</fullName>
        </value>
        <value>
          <fullName>EQ4310 - X-Smart</fullName>
        </value>
        <value>
          <fullName>EQ4311 - PLUS</fullName>
        </value>
        <value>
          <fullName>EQ4312 - IQ</fullName>
        </value>
        <value>
          <fullName>Glide path files</fullName>
        </value>
        <value>
          <fullName>Glyde</fullName>
        </value>
        <value>
          <fullName>Gp Modern</fullName>
        </value>
        <value>
          <fullName>Guttacore</fullName>
        </value>
        <value>
          <fullName>Guttacore &amp; plastic obturation</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_IMAG__c</fullName>
    <label>Products discussed (IMAG)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>2D PAN</fullName>
        </value>
        <value>
          <fullName>3D PAN</fullName>
        </value>
        <value>
          <fullName>AimRight Sensor Holder</fullName>
        </value>
        <value>
          <fullName>Axeos</fullName>
        </value>
        <value>
          <fullName>Consumables Intraoral</fullName>
        </value>
        <value>
          <fullName>Fona</fullName>
        </value>
        <value>
          <fullName>Galileos</fullName>
        </value>
        <value>
          <fullName>Heliodent</fullName>
        </value>
        <value>
          <fullName>Heliodent Plus</fullName>
        </value>
        <value>
          <fullName>Heliodent Vario</fullName>
        </value>
        <value>
          <fullName>Intra Oral</fullName>
        </value>
        <value>
          <fullName>Intra Oral_Heliodent</fullName>
        </value>
        <value>
          <fullName>Intra Oral_Xios</fullName>
        </value>
        <value>
          <fullName>Orthophos</fullName>
        </value>
        <value>
          <fullName>Orthophos E</fullName>
        </value>
        <value>
          <fullName>Orthophos S</fullName>
        </value>
        <value>
          <fullName>Orthophos S 2D</fullName>
        </value>
        <value>
          <fullName>Orthophos S 3D</fullName>
        </value>
        <value>
          <fullName>Orthophos SL 2D</fullName>
        </value>
        <value>
          <fullName>Orthophos SL 3D</fullName>
        </value>
        <value>
          <fullName>Orthophos XG 3</fullName>
        </value>
        <value>
          <fullName>Orthophos XG 3D</fullName>
        </value>
        <value>
          <fullName>Orthophos XG 3D Ready</fullName>
        </value>
        <value>
          <fullName>Orthophos XG 5</fullName>
        </value>
        <value>
          <fullName>Phosphore Plate</fullName>
        </value>
        <value>
          <fullName>Rinn® XCP-DS FIT® Universal Sensor Holder Products</fullName>
        </value>
        <value>
          <fullName>Rinn® XCP-PSP Fit™ Phosphor Plate Holder System</fullName>
        </value>
        <value>
          <fullName>Rinn XCP Film Kits and biteblocks</fullName>
        </value>
        <value>
          <fullName>S 3D (11x10)</fullName>
        </value>
        <value>
          <fullName>S 3D (11x10) Ceph</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_IMPL__c</fullName>
    <description>SBU: Implants, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Implants</description>
    <label>Products discussed (IMPL)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Acuris</fullName>
        </value>
        <value>
          <fullName>Ankylos</fullName>
        </value>
        <value>
          <fullName>Aquasil</fullName>
        </value>
        <value>
          <fullName>Astra Tech Implant System</fullName>
        </value>
        <value>
          <fullName>Astra Tech Implant System EV</fullName>
        </value>
        <value>
          <fullName>Astra Tech Implant System Profile</fullName>
        </value>
        <value>
          <fullName>ATIS EV - Smartfix</fullName>
        </value>
        <value>
          <fullName>Atlantis</fullName>
        </value>
        <value>
          <fullName>ATLANTIS Abutments</fullName>
        </value>
        <value>
          <fullName>ATLANTIS ISUS</fullName>
        </value>
        <value>
          <fullName>ATLANTIS Suprastructures</fullName>
        </value>
        <value>
          <fullName>Azento</fullName>
        </value>
        <value>
          <fullName>Azento: Astra Tech</fullName>
        </value>
        <value>
          <fullName>Azento: XiVE</fullName>
        </value>
        <value>
          <fullName>Celtra</fullName>
        </value>
        <value>
          <fullName>Custombase</fullName>
        </value>
        <value>
          <fullName>Frialit</fullName>
        </value>
        <value>
          <fullName>Frios</fullName>
        </value>
        <value>
          <fullName>Geistlich</fullName>
        </value>
        <value>
          <fullName>IO scanning</fullName>
        </value>
        <value>
          <fullName>MIS</fullName>
        </value>
        <value>
          <fullName>MIS 4BONE BCH</fullName>
        </value>
        <value>
          <fullName>MIS 4BONE RCM</fullName>
        </value>
        <value>
          <fullName>MIS 4Matrix+</fullName>
        </value>
        <value>
          <fullName>MIS BONDBONE</fullName>
        </value>
        <value>
          <fullName>MIS C1</fullName>
        </value>
        <value>
          <fullName>MIS C1 B+ o C1B</fullName>
        </value>
        <value>
          <fullName>MIS Connect</fullName>
        </value>
        <value>
          <fullName>MIS Lance +</fullName>
        </value>
        <value>
          <fullName>MIS Lance o EF5</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_INST__c</fullName>
    <label>Products discussed (INST)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>DAC</fullName>
        </value>
        <value>
          <fullName>DAC D</fullName>
        </value>
        <value>
          <fullName>DAC Premium</fullName>
        </value>
        <value>
          <fullName>DAC Prof.</fullName>
        </value>
        <value>
          <fullName>DAC Professional</fullName>
        </value>
        <value>
          <fullName>DAC Univ</fullName>
        </value>
        <value>
          <fullName>DAC Universal</fullName>
        </value>
        <value>
          <fullName>Hygiene</fullName>
        </value>
        <value>
          <fullName>Instrument</fullName>
        </value>
        <value>
          <fullName>Laser</fullName>
        </value>
        <value>
          <fullName>NitraDem</fullName>
        </value>
        <value>
          <fullName>NitraDem DC</fullName>
        </value>
        <value>
          <fullName>NitraDem EA</fullName>
        </value>
        <value>
          <fullName>NitraSeal</fullName>
        </value>
        <value>
          <fullName>Rotative Instruments</fullName>
        </value>
        <value>
          <fullName>SiroEndo</fullName>
        </value>
        <value>
          <fullName>SIROInspect</fullName>
        </value>
        <value>
          <fullName>SIROlaser</fullName>
        </value>
        <value>
          <fullName>SIROLaser Advance</fullName>
        </value>
        <value>
          <fullName>SIROLaser Advance Plus</fullName>
        </value>
        <value>
          <fullName>SIROLaser Blue</fullName>
        </value>
        <value>
          <fullName>Sirolaser Xtend</fullName>
        </value>
        <value>
          <fullName>SIROSeal</fullName>
        </value>
        <value>
          <fullName>SiroSeal Premium</fullName>
        </value>
        <value>
          <fullName>SiroSeal Professional</fullName>
        </value>
        <value>
          <fullName>SIROSonic Scaler</fullName>
        </value>
        <value>
          <fullName>Sprayvit</fullName>
        </value>
        <value>
          <fullName>T1</fullName>
        </value>
        <value>
          <fullName>T1 Classic</fullName>
        </value>
        <value>
          <fullName>T1 Line</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_ORTH__c</fullName>
    <description>SBU: Orthodontics, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Orthodontics</description>
    <label>Products discussed (ORTH)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Acceccories</fullName>
        </value>
        <value>
          <fullName>Accu Arch</fullName>
        </value>
        <value>
          <fullName>Accu Force</fullName>
        </value>
        <value>
          <fullName>Adhesives</fullName>
        </value>
        <value>
          <fullName>ADHESIVES &amp; CEMENTS</fullName>
        </value>
        <value>
          <fullName>Allure</fullName>
        </value>
        <value>
          <fullName>APPLIANCE CASES</fullName>
        </value>
        <value>
          <fullName>Arcs</fullName>
        </value>
        <value>
          <fullName>Bands</fullName>
        </value>
        <value>
          <fullName>BBC</fullName>
        </value>
        <value>
          <fullName>Bio-Bite Correctors (Class II Correctors)</fullName>
        </value>
        <value>
          <fullName>Bondable Tubes</fullName>
        </value>
        <value>
          <fullName>Bonding/Etchant</fullName>
        </value>
        <value>
          <fullName>Brackets</fullName>
        </value>
        <value>
          <fullName>Buttons</fullName>
        </value>
        <value>
          <fullName>CB3</fullName>
        </value>
        <value>
          <fullName>CB7</fullName>
        </value>
        <value>
          <fullName>CCO</fullName>
        </value>
        <value>
          <fullName>Cerec Ortho</fullName>
        </value>
        <value>
          <fullName>Clear BKT</fullName>
        </value>
        <value>
          <fullName>Courses</fullName>
        </value>
        <value>
          <fullName>CURING LIGHTS</fullName>
        </value>
        <value>
          <fullName>Digital/Techno</fullName>
        </value>
        <value>
          <fullName>DISPENSER</fullName>
        </value>
        <value>
          <fullName>Drufo</fullName>
        </value>
        <value>
          <fullName>Dry Field/DB</fullName>
        </value>
        <value>
          <fullName>DSKK Buccal Tubes</fullName>
        </value>
        <value>
          <fullName>DSKK Metal BKT</fullName>
        </value>
        <value>
          <fullName>DSKK SUS Wire</fullName>
        </value>
        <value>
          <fullName>ELASTICS</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_PREV__c</fullName>
    <description>SBU: Preventive, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Preventive</description>
    <label>Products discussed (PREV)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>ABLAZIONE E TRATTAMENTI</fullName>
        </value>
        <value>
          <fullName>ACCESSORI RADIOLOGIA</fullName>
        </value>
        <value>
          <fullName>Anestadent</fullName>
        </value>
        <value>
          <fullName>Anestethics</fullName>
        </value>
        <value>
          <fullName>Cavitron</fullName>
        </value>
        <value>
          <fullName>Cavitron Inserts</fullName>
        </value>
        <value>
          <fullName>Cavitron Units</fullName>
        </value>
        <value>
          <fullName>Desinfección (ZH/DS)</fullName>
        </value>
        <value>
          <fullName>DISINFEZIONE E STERILIZZAZIONE</fullName>
        </value>
        <value>
          <fullName>Fluorides</fullName>
        </value>
        <value>
          <fullName>Infection Control</fullName>
        </value>
        <value>
          <fullName>MIDWEST RDH Freedom</fullName>
        </value>
        <value>
          <fullName>Nupro</fullName>
        </value>
        <value>
          <fullName>Nupro White Varnish</fullName>
        </value>
        <value>
          <fullName>ORAQIX</fullName>
        </value>
        <value>
          <fullName>Oraqix Topical Anaesthetic</fullName>
        </value>
        <value>
          <fullName>Other Preventive</fullName>
        </value>
        <value>
          <fullName>Oxivir</fullName>
        </value>
        <value>
          <fullName>Pastas/Barniz Nupro</fullName>
        </value>
        <value>
          <fullName>Practice Protect Instrument Disinfection &amp; Cleaning Liquid</fullName>
        </value>
        <value>
          <fullName>Practice Protect Spray</fullName>
        </value>
        <value>
          <fullName>Practice Protect Wipes</fullName>
        </value>
        <value>
          <fullName>Prophy</fullName>
        </value>
        <value>
          <fullName>PS2120 - Jet-Plus</fullName>
        </value>
        <value>
          <fullName>PS2130 - Plus</fullName>
        </value>
        <value>
          <fullName>PS2140 - Select SPS</fullName>
        </value>
        <value>
          <fullName>PS2150 - Bobcat 25K</fullName>
        </value>
        <value>
          <fullName>PS3300 - SLI/TFI 30K</fullName>
        </value>
        <value>
          <fullName>PS3400 - 25K</fullName>
        </value>
        <value>
          <fullName>Purevac Mirror Tip</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Products_discussed_PROS__c</fullName>
    <description>SBU: Prosthetics, Countries: All - Used for call reporting of products. Controlled by VF to show on page layout if SBU= Prosthetics</description>
    <label>Products discussed (PROS)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <controllingField>Assigned_To_User_Country__c</controllingField>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Acrylics</fullName>
        </value>
        <value>
          <fullName>All Ceramics</fullName>
        </value>
        <value>
          <fullName>Alloy</fullName>
        </value>
        <value>
          <fullName>Artiplus</fullName>
        </value>
        <value>
          <fullName>Atlantis/Implants</fullName>
        </value>
        <value>
          <fullName>Attachements</fullName>
        </value>
        <value>
          <fullName>Bioplus</fullName>
        </value>
        <value>
          <fullName>Biostabil</fullName>
        </value>
        <value>
          <fullName>C3</fullName>
        </value>
        <value>
          <fullName>CCK</fullName>
        </value>
        <value>
          <fullName>Celtra</fullName>
        </value>
        <value>
          <fullName>Celtra Ceram</fullName>
        </value>
        <value>
          <fullName>CELTRA DUO</fullName>
        </value>
        <value>
          <fullName>Celtra Press</fullName>
        </value>
        <value>
          <fullName>Celtra Press investment</fullName>
        </value>
        <value>
          <fullName>Ceramco3</fullName>
        </value>
        <value>
          <fullName>ceramic furnace</fullName>
        </value>
        <value>
          <fullName>CERCON</fullName>
        </value>
        <value>
          <fullName>Cercon base 98mm</fullName>
        </value>
        <value>
          <fullName>Cercon ht</fullName>
        </value>
        <value>
          <fullName>Cercon kiss</fullName>
        </value>
        <value>
          <fullName>Cercon xt</fullName>
        </value>
        <value>
          <fullName>Cercon xt ML</fullName>
        </value>
        <value>
          <fullName>Consumables lab</fullName>
        </value>
        <value>
          <fullName>Crown &amp; Bridge</fullName>
        </value>
        <value>
          <fullName>Denture Base</fullName>
        </value>
        <value>
          <fullName>Denture Teeth</fullName>
        </value>
        <value>
          <fullName>Digital Denture</fullName>
        </value>
        <value>
          <fullName>Digital Materials</fullName>
        </value>
        <value>
          <fullName>DS universal stains&amp;glaze</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
</CustomObject>